k8s/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: app-ingress

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hive-service
                port:
                  number: 8000
